# DecompROS

./: README.md
DecompROS/decomp_ros_utils/: CMakeLists.txt  package.xml
DecompROS/decomp_ros_utils/include/decomp_basis/: data_type.h  data_utils.h
DecompROS/decomp_ros_utils/include/decomp_geometry/: ellipsoid.h  geometric_utils.h  polyhedron.h
DecompROS/decomp_ros_utils/include/decomp_ros_utils/: data_ros_utils.h
DecompROS/decomp_ros_utils/include/decomp_util/: decomp_base.h  ellipsoid_decomp.h  iterative_decomp.h  line_segment.h  seed_decomp.h
DecompROS/decomp_rviz_plugins/: CMakeLists.txt  package.xml
DecompROS/decomp_rviz_plugins/src/: ellipsoid_array_display.cpp
DecompROS/decomp_test_node/: CMakeLists.txt  package.xml
DecompROS/decomp_test_node/src/: test_path_decomp_2d.cpp  test_path_decomp_3d.cpp
